[gd_scene load_steps=2 format=3 uid="uid://bounpd4i1v5pf"]

[ext_resource type="Script" uid="uid://ctegi0xw3r5t5" path="res://src/ui/hud/hud_dev.gd" id="1_nxgpj"]

[node name="DevHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
script = ExtResource("1_nxgpj")

[node name="CoordsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 23.0
offset_top = 24.0
offset_right = 193.0
offset_bottom = 58.0
theme_override_font_sizes/font_size = 24
text = "hello.. world......
"

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 58.0
offset_right = 90.0
offset_bottom = 92.0
theme_override_font_sizes/font_size = 24
text = "12hr
"

[node name="WindLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 294.0
offset_top = 26.0
offset_right = 389.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 24
text = "Wind: W"

[node name="HungerLabel" type="Label" parent="."]
offset_left = 114.0
offset_top = 58.0
offset_right = 251.0
offset_bottom = 92.0
theme_override_font_sizes/font_size = 24
text = "Hunger: 111"
